--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="cvicon.ico">  
+    <link rel="shortcut icon" href="CV/cvicon.ico">  
     <!-- FontAwesome JS-->
-	<script defer src="assets/fontawesome/js/fontawesome.js"></script>
+	<script defer src="CV/assets/fontawesome/js/fontawesome.js"></script>
     <!-- Global CSS -->
-    <link rel="stylesheet" href="assets/plugins/css/stylesheet.css">   
+    <link rel="stylesheet" href="CV/assets/plugins/css/stylesheet.css">   
     <!-- Theme CSS -->  
-    <link id="theme-style" rel="stylesheet" href="assets/css/6.css">
+    <link id="theme-style" rel="stylesheet" href="CV/assets/css/6.css">
 </head> 
 
 <body>
     <div class="wrapper mt-lg-5">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/" alt="" />
+                <img class="profile" src="CV/assets/images/" alt="" />
                 <h1 class="name">Aleksei R.</h1>
                 <h3 class="tagline">QA Engineer</h3>
             </div><!--//profile-container-->
