--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="wrapper mt-lg-5">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="CV/assets/images/" alt="" />
+                <img class="profile" src="CV/assets/images/profile.png" alt="" />
                 <h1 class="name">Aleksei R.</h1>
                 <h3 class="tagline">QA Engineer</h3>
             </div><!--//profile-container-->
