--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
     </div>
  
     <footer class="footer">
+	<div class="text-center">
+        	<small class="copyright">Designed by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+        </div><!--//container-->
     </footer><!--//footer-->
         
 </body>
